RESOLVED FIXED129865
FLT should call fmod directly on platforms where LLVM cannot relocate the libcall
https://bugs.webkit.org/show_bug.cgi?id=129865
Summary FLT should call fmod directly on platforms where LLVM cannot relocate the lib...
Andrew Trick
Reported 2014-03-06 22:59:19 PST
Posting a patch shortly.
Attachments
Patch (2.64 KB, patch)
2014-03-06 23:13 PST, Andrew Trick
no flags
Patch (1.42 KB, patch)
2014-03-07 11:23 PST, Andrew Trick
no flags
Andrew Trick
Comment 1 2014-03-06 23:13:41 PST
WebKit Commit Bot
Comment 2 2014-03-07 08:58:06 PST
Comment on attachment 226089 [details] Patch Clearing flags on attachment: 226089 Committed r165264: <http://trac.webkit.org/changeset/165264>
WebKit Commit Bot
Comment 3 2014-03-07 08:58:08 PST
All reviewed patches have been landed. Closing bug.
Geoffrey Garen
Comment 4 2014-03-07 10:43:14 PST
Comment on attachment 226089 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=226089&action=review > Source/JavaScriptCore/ftl/FTLOutput.h:132 > + // FIXME: LLVM may soften float operations be expanding them to libcalls. "by"
Andrew Trick
Comment 5 2014-03-07 11:23:34 PST
Reopening to attach new patch.
Andrew Trick
Comment 6 2014-03-07 11:23:36 PST
WebKit Commit Bot
Comment 7 2014-03-07 12:13:42 PST
Comment on attachment 226140 [details] Patch Clearing flags on attachment: 226140 Committed r165275: <http://trac.webkit.org/changeset/165275>
WebKit Commit Bot
Comment 8 2014-03-07 12:13:46 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.