FLT should call fmod directly on platforms where LLVM cannot relocate the libcall https://bugs.webkit.org/show_bug.cgi?id=129865

Patch by Andrew Trick <atrick@apple.com> on 2014-03-07
Reviewed by Filip Pizlo.

* ftl/FTLIntrinsicRepository.h:
* ftl/FTLOutput.h:
(JSC::FTL::Output::doubleRem):

Canonical link: https://commits.webkit.org/147900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165264 268f45cc-cd09-0410-ab3c-d52691b4dbfc